ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - david-home.com
    secretName: my-tls-secret
  rules:
  - host: "david-jupyter.com" # Don't forget to change vi /etc/hosts mapping as well!
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jupyter-service
            port:
              number: 1111
  - host: "david-mongodb.com" # Don't forget to change vi /etc/hosts mapping as well!
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
